--- a/compile_problem.ipynb
+++ b/compile_problem.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPgO5odbJIjFeKNeuMeXSwE",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/k-hkrachenfels/rudolf_schubert_rubettes/blob/main/compile_problem.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'rubettes'...\n",
             "remote: Enumerating objects: 9, done.\u001b[K\n",
@@ -51,14 +35,12 @@
         }
       ],
       "source": [
-        "!git clone https://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:x-oauth-basic@github.com/k-hkrachenfels/rubettes.git"
+        "!git clone https://my-token:x-oauth-basic@github.com/k-hkrachenfels/rubettes.git"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ls rubettes"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,22 +48,22 @@
         "id": "gIf-LhaQkjsL",
         "outputId": "b20310b4-0608-478e-aa59-d0550300aa61"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "gema.txt  platte01  platte01.c  readme.md  rubettes.txt  universal_music.txt\n"
           ]
         }
+      ],
+      "source": [
+        "ls rubettes"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!sudo apt-get update -y"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,11 +71,10 @@
         "id": "mBKwEzF0KQyE",
         "outputId": "af84e794-122d-4bb5-bda4-2d726f0de6e9"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
             "\r0% [Connecting to archive.ubuntu.com (91.189.91.38)] [Waiting for headers] [1 I\r0% [Connecting to archive.ubuntu.com (91.189.91.38)] [Waiting for headers] [Wai\r                                                                               \rHit:2 http://archive.ubuntu.com/ubuntu focal InRelease\n",
@@ -118,13 +99,14 @@
             "Reading package lists... Done\n"
           ]
         }
+      ],
+      "source": [
+        "!sudo apt-get update -y"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!apt-get install -y libgsl-dev"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -132,11 +114,10 @@
         "id": "qSHpqVLGiC0y",
         "outputId": "69c3dc2b-4319-4aa1-b278-87bfa8496439"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Reading package lists... Done\n",
             "Building dependency tree       \n",
@@ -171,13 +152,14 @@
             "Processing triggers for libc-bin (2.31-0ubuntu9.9) ...\n"
           ]
         }
+      ],
+      "source": [
+        "!apt-get install -y libgsl-dev"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!cd rubettes && cc -o platte01 platte01.c -lgsl -lgslcblas -lm -Wall -O3 "
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,11 +167,10 @@
         "id": "MMKCjp0RhZeC",
         "outputId": "6db5b7cd-7219-4e6d-c111-606dc60d2145"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[01m\u001b[Kplatte01.c:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kbestimme_kreis_parameter_qr\u001b[m\u001b[K’:\n",
             "\u001b[01m\u001b[Kplatte01.c:1248:30:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kimplicit declaration of function ‘\u001b[01m\u001b[Kgsl_linalg_QR_decomp_r\u001b[m\u001b[K’; did you mean ‘\u001b[01m\u001b[Kgsl_linalg_QR_decomp\u001b[m\u001b[K’? [\u001b[01;35m\u001b[K-Wimplicit-function-declaration\u001b[m\u001b[K]\n",
@@ -250,13 +231,14 @@
             "collect2: error: ld returned 1 exit status\n"
           ]
         }
+      ],
+      "source": [
+        "!cd rubettes && cc -o platte01 platte01.c -lgsl -lgslcblas -lm -Wall -O3 "
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!cd rubettes && gcc platte01.c -o platte01 -lgsl -lgslcblas -lm"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -264,11 +246,10 @@
         "id": "G0c4xP53jiUA",
         "outputId": "6067b4ac-6d94-4d73-bfb1-273c180126ed"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[01m\u001b[Kplatte01.c:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kbestimme_kreis_parameter_qr\u001b[m\u001b[K’:\n",
             "\u001b[01m\u001b[Kplatte01.c:1248:30:\u001b[m\u001b[K \u001b[01;35m\u001b[Kwarning: \u001b[m\u001b[Kimplicit declaration of function ‘\u001b[01m\u001b[Kgsl_linalg_QR_decomp_r\u001b[m\u001b[K’; did you mean ‘\u001b[01m\u001b[Kgsl_linalg_QR_decomp\u001b[m\u001b[K’? [\u001b[01;35m\u001b[K-Wimplicit-function-declaration\u001b[m\u001b[K]\n",
@@ -292,13 +273,14 @@
             "collect2: error: ld returned 1 exit status\n"
           ]
         }
+      ],
+      "source": [
+        "!cd rubettes && gcc platte01.c -o platte01 -lgsl -lgslcblas -lm"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!apt-cache policy libgsl-dev"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -306,11 +288,10 @@
         "id": "3tdLV1o0kN15",
         "outputId": "f5b69c11-793d-4c8b-c3b6-df135d9b03fa"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "libgsl-dev:\n",
             "  Installed: 2.5+dfsg-6build1\n",
@@ -321,13 +302,14 @@
             "        100 /var/lib/dpkg/status\n"
           ]
         }
+      ],
+      "source": [
+        "!apt-cache policy libgsl-dev"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!apt-get update && apt-get install -y libgsl-dev"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,11 +317,10 @@
         "id": "LlEioueCkVek",
         "outputId": "dfb8f722-0e32-439a-ce00-32ab391832cb"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
             "\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [1 InRelease 14.2 kB/114\r                                                                               \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
@@ -369,7 +350,26 @@
             "0 upgraded, 0 newly installed, 0 to remove and 28 not upgraded.\n"
           ]
         }
+      ],
+      "source": [
+        "!apt-get update && apt-get install -y libgsl-dev"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPgO5odbJIjFeKNeuMeXSwE",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
